--- a/app/src/main/res/layout/headline_tab_frag.xml
+++ b/app/src/main/res/layout/headline_tab_frag.xml
@@ -3,10 +3,10 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-<ListView
+<com.handmark.pulltorefresh.library.PullToRefreshListView
     android:id="@+id/lv_headline"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</ListView>
+</com.handmark.pulltorefresh.library.PullToRefreshListView>
 </LinearLayout>
