--- a/app/src/main/res/layout/item_headline.xml
+++ b/app/src/main/res/layout/item_headline.xml
@@ -5,8 +5,8 @@
               android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_item_headline"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="130dp"
+        android:layout_height="100dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         />
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:slayout_marginLeft="10dp"
+        android:textSize="18sp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"/>
 
 </LinearLayout>
